# octoflow

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-STDLIB  README.md  SKILL.md  gpu-vm.html  index.html  install.ps1  install.sh  llms.txt  loom.html  mcp.html  robots.txt  run_test.ps1  sitemap.xml
apps/octoview/: Cargo.toml
apps/octoview-browser/: Cargo.toml
apps/octoview-browser/shaders/: fullscreen.frag  fullscreen.vert
apps/octoview-browser/src/: bookmarks.rs  chrome.rs  css.rs  extract.rs  fetch.rs  find.rs  flow_mode.rs  framebuffer.rs  image_loader.rs  inspector.rs  js_engine.rs  layout.rs  loom.rs  main.rs  ovd.rs  page.rs  pipeline.rs  renderer.rs  selector_match.rs  side_panel.rs  stylesheet.rs  tabs.rs  text.rs  vulkan.rs
apps/octoview/examples/: gmail-login.ova  hn-full-workflow.ova  hn-headlines.ova  hn-screenshot.ova  wikipedia-crawl.ova  youtube-search.ova
apps/octoview/src/: action.rs  cache.rs  extract.rs  fetch.rs  js_engine.rs  main.rs  meta.rs  ovd.rs  query.rs  selector.rs  session.rs  shell.rs  tui.rs  watch.rs
compiler/: Cargo.toml
compiler/parser/: Cargo.toml
compiler/parser/src/: ast.rs  lexer.rs  lib.rs
compiler/src/: lib.rs  loader.rs  main.rs  mcp.rs  octo_media.rs  repl.rs  templates.rs  update.rs
compiler/src/analysis/: lint.rs  mod.rs  preflight.rs  range_tracker.rs
compiler/src/chat/: autoskill.rs  config.rs  context.rs  extraction.rs  knowledge.rs  memory.rs  mod.rs  model.rs  streaming.rs
compiler/src/chat/knowledge/: L0-core.md
compiler/src/chat/knowledge/L1/: L1-ai.md  L1-collections.md  L1-compiler.md  L1-crypto.md  L1-data.md  L1-db.md  L1-devops.md  L1-gpu.md  L1-gui.md  L1-loom.md  L1-media.md  L1-ml.md  L1-science.md  L1-stats.md  L1-string.md  L1-sys.md  L1-terminal.md  L1-web.md
compiler/src/chat/knowledge/L2/: L2-ai-chat.md  L2-ai-gguf.md  L2-ai-sampling.md  L2-ai-tokenizer.md  L2-collections-array_utils.md  L2-collections-collections.md  L2-collections-graph.md  L2-collections-heap.md  L2-collections-queue.md  L2-collections-sort.md  L2-collections-stack.md  L2-crypto-base64.md  L2-crypto-encoding.md  L2-crypto-hash.md  L2-crypto-hex.md  L2-crypto-random.md  L2-data-csv.md  L2-data-io.md  L2-data-io_root.md  L2-data-json.md  L2-data-pipeline.md  L2-data-transform.md  L2-data-validate.md  L2-db-core.md  L2-db-query.md  L2-db-schema.md  L2-devops-config.md  L2-devops-fs.md  (+72 more)
compiler/src/io/: http.rs  image.rs  json.rs  mod.rs  net.rs  octo.rs  regex.rs  web.rs
compiler/src/platform/: audio.rs  cpu.rs  mod.rs  nvml.rs  text_render.rs  win32.rs  window.rs
compiler/src/runtime/: grammar.rs  mod.rs  tests.rs
compiler/vulkan/: Cargo.toml  build.rs
compiler/vulkan/src/: device.rs  dispatch.rs  gpu_run.rs  lib.rs  memory.rs  vk_sys.rs  vm.rs
(+1445 files in other folders)
