[workspace]
members = [
    "compiler/vulkan",
    "compiler/parser",
    "compiler",
    "apps/octoview",
    "apps/octoview-browser",
]
resolver = "2"

[workspace.package]
version = "1.3.0"
edition = "2021"
repository = "https://github.com/octoflow-lang/octoflow"
license = "Apache-2.0"

[workspace.dependencies]
# SPIR-V generation moved to ir.flow (self-hosted)
octoflow-vulkan = { path = "compiler/vulkan" }
octoflow-parser = { path = "compiler/parser" }
