[package]
name = "octoflow-cli"
version = "1.3.0"
edition = "2021"
description = "OctoFlow CLI — compile and run .flow programs"

[lib]
name = "octoflow_cli"
path = "src/lib.rs"

[[bin]]
name = "octoflow"
path = "src/main.rs"

[[bin]]
name = "octo-media"
path = "src/octo_media.rs"

[[bin]]
name = "octoflow-selfhosted"
path = "src/bin/octoflow_selfhosted.rs"

[dependencies]
octoflow-parser.workspace = true
octoflow-vulkan.workspace = true
# All dependencies are pure Rust — no external crates
