[package]
name = "octoview-browser"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "octoview-browser"
path = "src/main.rs"

[dependencies]
winit = "0.30"
ash = "0.38"
raw-window-handle = "0.6"
fontdue = "0.9"
html5ever = "0.38"
markup5ever = "0.38"
markup5ever_rcdom = "0.38"
reqwest = { version = "0.12", features = ["blocking", "native-tls"] }
url = "2"
cssparser = "0.36"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
boa_engine = "0.20"
# Loom Engine GPU compute -- optional until Vulkan device sharing is implemented.
# Activate with: cargo build --features loom-gpu
octoflow-vulkan = { path = "../../compiler/vulkan", optional = true }

[features]
default = []
loom-gpu = ["dep:octoflow-vulkan"]
